{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 504,
  "lineage": "1613ba16-da21-fec3-8788-c99c8ebed756",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:730335267529:loadbalancer/app/wordpress-alb/e78746c2e3439982",
            "arn_suffix": "app/wordpress-alb/e78746c2e3439982",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-alb-1579772800.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:730335267529:loadbalancer/app/wordpress-alb/e78746c2e3439982",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00e9a11fb15f6e025"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-066528e5381500364"
              },
              {
                "subnet_id": "subnet-07b771df0e97fddb3"
              }
            ],
            "subnets": [
              "subnet-066528e5381500364",
              "subnet-07b771df0e97fddb3"
            ],
            "vpc_id": "vpc-0a918aeee3ab8c10c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:730335267529:listener/app/wordpress-alb/e78746c2e3439982/ff6fb8b15e381a57",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:730335267529:targetgroup/wordpress-alb-tg/b6ff79caefb1eb62",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:730335267529:listener/app/wordpress-alb/e78746c2e3439982/ff6fb8b15e381a57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:730335267529:loadbalancer/app/wordpress-alb/e78746c2e3439982",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_lb.wordpress_alb",
            "module.ec2.aws_lb_target_group.alb_target_grp",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:730335267529:targetgroup/wordpress-alb-tg/b6ff79caefb1eb62",
            "arn_suffix": "targetgroup/wordpress-alb-tg/b6ff79caefb1eb62",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:730335267529:targetgroup/wordpress-alb-tg/b6ff79caefb1eb62",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a918aeee3ab8c10c"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042f8330a93c6c7b9",
            "arn": "arn:aws:ec2:eu-west-3:730335267529:elastic-ip/eipalloc-042f8330a93c6c7b9",
            "domain": "vpc",
            "id": "eipalloc-042f8330a93c6c7b9",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-39-201-217.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.201.217",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:730335267529:internet-gateway/igw-06ab008cef4c4232f",
            "id": "igw-06ab008cef4c4232f",
            "owner_id": "730335267529",
            "tags": {
              "Name": "vpc-igw"
            },
            "tags_all": {
              "Name": "vpc-igw"
            },
            "vpc_id": "vpc-0a918aeee3ab8c10c"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042f8330a93c6c7b9",
            "association_id": "eipassoc-0b5c98e020dd98f25",
            "connectivity_type": "public",
            "id": "nat-0feb4d1e7c671c435",
            "network_interface_id": "eni-03df907e187248b4d",
            "private_ip": "10.0.132.241",
            "public_ip": "13.39.201.217",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-066528e5381500364",
            "tags": {
              "Name": "NAT-gw"
            },
            "tags_all": {
              "Name": "NAT-gw"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.eip_natgw",
            "module.networking.aws_internet_gateway.vpc_igw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:730335267529:route-table/rtb-00561316800d5c520",
            "id": "rtb-00561316800d5c520",
            "owner_id": "730335267529",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0feb4d1e7c671c435",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-app-rt"
            },
            "tags_all": {
              "Name": "private-app-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a918aeee3ab8c10c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.eip_natgw",
            "module.networking.aws_internet_gateway.vpc_igw",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:730335267529:route-table/rtb-0522008e4f9640f30",
            "id": "rtb-0522008e4f9640f30",
            "owner_id": "730335267529",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ab008cef4c4232f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a918aeee3ab8c10c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.vpc_igw",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf1bd246f3187fdc",
            "route_table_id": "rtb-00561316800d5c520",
            "subnet_id": "subnet-0fcb9c9084fd82bd9"
          },
          "dependencies": [
            "module.networking.aws_eip.eip_natgw",
            "module.networking.aws_internet_gateway.vpc_igw",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_route_table.private_app_rt",
            "module.networking.aws_subnet.private_app_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbcf361583701c9b",
            "route_table_id": "rtb-00561316800d5c520",
            "subnet_id": "subnet-0517cd81c1f779485"
          },
          "dependencies": [
            "module.networking.aws_eip.eip_natgw",
            "module.networking.aws_internet_gateway.vpc_igw",
            "module.networking.aws_nat_gateway.nat_gw",
            "module.networking.aws_route_table.private_app_rt",
            "module.networking.aws_subnet.private_app_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7235552dfa4f521",
            "route_table_id": "rtb-0522008e4f9640f30",
            "subnet_id": "subnet-066528e5381500364"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.vpc_igw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ee21a17ff9bdec9",
            "route_table_id": "rtb-0522008e4f9640f30",
            "subnet_id": "subnet-07b771df0e97fddb3"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.vpc_igw",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:730335267529:subnet/subnet-0fcb9c9084fd82bd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcb9c9084fd82bd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335267529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-app-subnet-AZ-1"
            },
            "tags_all": {
              "Name": "private-app-subnet-AZ-1"
            },
            "vpc_id": "vpc-0a918aeee3ab8c10c"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:730335267529:subnet/subnet-0517cd81c1f779485",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0517cd81c1f779485",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335267529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-app-subnet-AZ-2"
            },
            "tags_all": {
              "Name": "private-app-subnet-AZ-2"
            },
            "vpc_id": "vpc-0a918aeee3ab8c10c"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:730335267529:subnet/subnet-066528e5381500364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066528e5381500364",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335267529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-AZ-1"
            },
            "tags_all": {
              "Name": "public-subnet-AZ-1"
            },
            "vpc_id": "vpc-0a918aeee3ab8c10c"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:730335267529:subnet/subnet-07b771df0e97fddb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b771df0e97fddb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335267529",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-AZ-2"
            },
            "tags_all": {
              "Name": "public-subnet-AZ-2"
            },
            "vpc_id": "vpc-0a918aeee3ab8c10c"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:730335267529:vpc/vpc-0a918aeee3ab8c10c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e64476af66c41682",
            "default_route_table_id": "rtb-054803b9f26b09c26",
            "default_security_group_id": "sg-0da68b4527017da42",
            "dhcp_options_id": "dopt-00a2f8611dab42acc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a918aeee3ab8c10c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054803b9f26b09c26",
            "owner_id": "730335267529",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:730335267529:security-group/sg-00e9a11fb15f6e025",
            "description": "Allow HTTP(S) traffic for load balancer",
            "egress": [],
            "id": "sg-00e9a11fb15f6e025",
            "ingress": [],
            "name": "alb-SG",
            "name_prefix": "",
            "owner_id": "730335267529",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a918aeee3ab8c10c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:730335267529:security-group/sg-0b54148c52143fa68",
            "description": "Allow SSH \u0026 Internet traffic for instances in application tier",
            "egress": [],
            "id": "sg-0b54148c52143fa68",
            "ingress": [],
            "name": "app-server-SG",
            "name_prefix": "",
            "owner_id": "730335267529",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a918aeee3ab8c10c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastionhost_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:730335267529:security-group/sg-0b9d93654cc7a9c4b",
            "description": "Allow inbound SSH traffic for bastionhost",
            "egress": [],
            "id": "sg-0b9d93654cc7a9c4b",
            "ingress": [],
            "name": "bastionhost-SG",
            "name_prefix": "",
            "owner_id": "730335267529",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a918aeee3ab8c10c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:730335267529:security-group/sg-01b4936fa4ddf3330",
            "description": "Allow inbound SSH traffic for instances in database tier",
            "egress": [],
            "id": "sg-01b4936fa4ddf3330",
            "ingress": [],
            "name": "db-server-SG",
            "name_prefix": "",
            "owner_id": "730335267529",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a918aeee3ab8c10c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:730335267529:security-group/sg-07be4c597f4eee61d",
            "description": "Allow NFS traffic",
            "egress": [],
            "id": "sg-07be4c597f4eee61d",
            "ingress": [],
            "name": "efs-access",
            "name_prefix": "",
            "owner_id": "730335267529",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a918aeee3ab8c10c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_HTTPS_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-60630651",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00e9a11fb15f6e025",
            "security_group_rule_id": "sgr-08d1b2a5914172997",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_HTTP_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-4200337660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00e9a11fb15f6e025",
            "security_group_rule_id": "sgr-0239aa53fcd5a6ee8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_outbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2446470008",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00e9a11fb15f6e025",
            "security_group_rule_id": "sgr-0c10001c57f77ffc7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_alb_HTTPS_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1657634879",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b54148c52143fa68",
            "security_group_rule_id": "sgr-0abc420f1f8e21226",
            "self": false,
            "source_security_group_id": "sg-00e9a11fb15f6e025",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.app_server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_alb_HTTP_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1771708962",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b54148c52143fa68",
            "security_group_rule_id": "sgr-08a9108de0a4ef5a6",
            "self": false,
            "source_security_group_id": "sg-00e9a11fb15f6e025",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.app_server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_outbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3515294714",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b54148c52143fa68",
            "security_group_rule_id": "sgr-07570b7f0ea588b2a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.app_server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_server_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-4270964857",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b54148c52143fa68",
            "security_group_rule_id": "sgr-0ed491efd160bad9b",
            "self": false,
            "source_security_group_id": "sg-0b9d93654cc7a9c4b",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.app_server_sg",
            "module.security_groups.aws_security_group.bastionhost_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastionhost_outbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4087608793",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b9d93654cc7a9c4b",
            "security_group_rule_id": "sgr-04c7390f8e7dbe590",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.bastionhost_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastionhost_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4064356362",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b9d93654cc7a9c4b",
            "security_group_rule_id": "sgr-01e4b1cc6eaa313c1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.bastionhost_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_server_mysql_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2141058334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01b4936fa4ddf3330",
            "security_group_rule_id": "sgr-0bd0897b4a837c3c7",
            "self": false,
            "source_security_group_id": "sg-0b54148c52143fa68",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.app_server_sg",
            "module.security_groups.aws_security_group.db_server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_server_outbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3982926456",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01b4936fa4ddf3330",
            "security_group_rule_id": "sgr-06022404a6e3233fb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.db_server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_outbound_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2229961101",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07be4c597f4eee61d",
            "security_group_rule_id": "sgr-00be9a7aeea1023a6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.efs_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nfs_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-4206154179",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07be4c597f4eee61d",
            "security_group_rule_id": "sgr-028068e5d691f45e6",
            "self": false,
            "source_security_group_id": "sg-07be4c597f4eee61d",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security_groups.aws_security_group.efs_sg"
          ]
        }
      ]
    }
  ]
}